fix: remove useless dto detail
